update log file index