@@ -47,7 +47,7 @@ import ch.ethz.idsc.tensor.io.TensorProperties;
     this.object = object;
     try {
       // TODO JPH use proper default constructor
-      reference = object.getClass().newInstance();
+      reference = object.getClass().getDeclaredConstructor().newInstance();
     } catch (Exception exception) {
       reference = null;
       System.out.println(object.getClass().getSimpleName());
